--- a/catalog/catalog.html
+++ b/catalog/catalog.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Catalog</h1>
-<a href="http://localhost:63342/learn-js/catalog/home.html">Home</a>
+<a href="http://localhost:63342/learn-js/%D0%B7%D1%84%D0%BF%D1%83.html">Home</a>
 -> Catalog<br>
 <a href="http://localhost:63342/learn-js/catalog/skates/skates.html"><i><b>Skates</b></i></a><br>
 <a href="http://localhost:63342/learn-js/catalog/bikes/bikes.html"><i><b>Bikes</b></i></a>
