problem with nav

--- a/papko/index.html
+++ b/papko/index.html
@@ -15,11 +15,8 @@
 
             #footer {
                 position: absolute;
-                bottom: 0;
-                left: 0;
-                right: 0;
-                height: 50px;
-                background-color: forestgreen;
+                bo
+                height: 50px;d-color: forestgreen;
             }
 
             #center {
@@ -43,8 +40,6 @@
             #right_column {
                 position: absolute;
                 right: 0;
-                top: 0;
-                bottom: 0;
                 width: 200px;
                 background-color: #8fa09b;
             }
@@ -67,12 +62,8 @@
             <div id="left_column">
                 left
             </div>
-            <div id="content">
-                <h1>Bikes and Skates</h1>
-                <p>
-                    <ul>
-                        <li>
-                            A skateboard is a type of sports equipment used primarily for
+            <div i<li>
+                            A skateboard is a type of spquipment used primarily for
                             the activity of skateboarding.It usually consists of a specially
                             designed maplewood board combined with a polyurethane coating used
                             for making smoother slides and stronger durability.
