--- a/polina/fixed_layout/page.html
+++ b/polina/fixed_layout/page.html
@@ -5,7 +5,7 @@
         <title>Page</title>
         <link href="page_style.css" rel="stylesheet">
     </head>
-        <body>
+        <>
             <div id="container">
                 <div id="header">Sports</div>
                 <div id="sidebar">
@@ -93,6 +93,5 @@
                 <div id="footer">
                     &copy; Polina Martynova
                 </div>
-            </div>
-        </body>
+            </div
 </html>
