--- a/курсы.html
+++ b/курсы.html
@@ -37,7 +37,4 @@
         </div>
         <div style="float:right; border:1px solid gold; height:871px;">
             asdfasdf<br>
-            qwerqwer
-        </div>
-    </body>
-</html>
+            qwerqw
