--- a/doc.html
+++ b/doc.html
@@ -10,3 +10,11 @@
 </h1>
 </body>
 </html>
+
+
+
+<!--<nav>-->
+<!--&lt;!&ndash;<input type="button" value="All Categories">&ndash;&gt;-->
+<!--&lt;!&ndash;<input type="button" value="Man">&ndash;&gt;-->
+<!--&lt;!&ndash;<input type="button" value="Woman">&ndash;&gt;-->
+<!--</nav>-->
