--- a/sit_site/Home/home.html
+++ b/sit_site/Home/home.html
@@ -6,26 +6,33 @@
         <link href="home_style.css" rel="stylesheet">
     </head>
     <body>
-        <header>
-            <figure>
-                <img src="Untitled.png">
-            </figure>
-        </header>
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li>Chothing</li>
-                <li>Shoes</li>
-                <li>Electronics</li>
-                <li>Purfumes</li>
-                <li>Contact Us</li>
-            </ul>
-        </nav>
-        <nav></nav>
-        <article></article>
-        <aside></aside>
-        <nav></nav>
-        <footer></footer>
+        <div class="wrapper">
+            <header>
+                <figure>
+                    <img src="Untitled.png">
+                </figure>
+            </header>
+            <nav>
+                <ul>
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Chothing</li>
+                    <li>Shoes</li>
+                    <li>Electronics</li>
+                    <li>Purfumes</li>
+                    <li>Contact Us</li>
+                </ul>
+                <div class="img"><img src="maket2.png"></div>
+            </nav>
+           <div class="nav">
+           </div>
+            <div class="nav2">
+
+            </div>
+            <article></article>
+            <aside></aside>
+            <nav></nav>
+            <footer></footer>
+        </div>
     </body>
 </html>
